--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 			<p>And it's a funny sort of business to be sitting up there at your desk, talking down at your subordinates from up there, especially when you have to go right up close because the boss is hard of hearing. Well, there's still some hope; once I've got the money together to pay off my parents' debt to him - another five or six years I suppose - that's definitely what I'll do. That's when I'll make the big change. First of all though, I've got to get up, my train leaves at five. " And he looked over at the alarm clock, ticking on the chest of drawers. "God in Heaven! " he thought. It was half past six and the hands were quietly moving forwards, it was even later than half past, more like quarter to seven. Had the alarm clock not rung? He could see from the bed that it had been set for four o'clock as it should have been; it certainly must have rung. Yes, but was it possible to quietly sleep through that furniture-rattling noise? True, he had not</p>
 		</div>
-		<div class="sidebar">I ❤‎ ❤‎ ❤‎ Kafka!</div>
+		<div class="sidebar"><a href="mySripts:pageViewed()";>I ❤‎ ❤‎ ❤‎ Kafka!</a></div>
 	</div>
 </body>
 	<script src="myScripts.js"></script>
